--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 /* css 註解 */
 body {
   font-size: 40px;
-  background-color: #36e7ff;
+  font-family: "Arial, Helvetica, sans-serif";
+  background-color: #6ec807;
   color: #333;
   font-weight: 400;
   line-height: 10px;
@@ -11,10 +12,19 @@ body {
 
 .wrapper {
   width: 1366px;
-  margin: 10px auto;
+  margin: 20px auto;
+  background-color: aquamarine;
 }
 
 h1 {
   font-size: 46px;
+}
+
+span {
+  font-size: 20px;
+}
+
+.box {
+  font-size: 30px;
 }
 /*# sourceMappingURL=style.css.map */
