--- a/style.scss
+++ b/style.scss
@@ -77,5 +77,13 @@ $attr: "padding";
 
 }
 
+.var {
+  width:  10px + 1px;
+  height: 10px - 20;
+  margin: 10px * 9;
+  font : (100 / 20); // 除法要特別注意
+}
+
+
 
 
