--- a/style.scss
+++ b/style.scss
@@ -118,18 +118,20 @@ $width : 767;
 }
 
 
-$btn_bg : rgb(25, 0, 255);
+$btn_bg : rgb(173, 0, 38);
+$btn_font : #fff;
 
 .btn {
   width: 100%;
   padding: 20px;
   text-align: center;
   background-color: $btn_bg;
-  color: #fff;
+  color: invert($btn_bg);
   cursor: pointer;
+  transition: .3s all ease;
 }
- .btn:hover {
-      background-color: lighten($btn_bg, 20);                   
+.btn:hover {
+      background-color: lighten($btn_bg, 20); // 顏色內建                  
  }
 
             
