--- a/style.scss
+++ b/style.scss
@@ -121,19 +121,52 @@ $width : 767;
 $btn_bg : rgb(173, 0, 38);
 $btn_font : #fff;
 
-.btn {
-  width: 100%;
-  padding: 20px;
-  text-align: center;
-  background-color: $btn_bg;
-  color: invert($btn_bg);
-  cursor: pointer;
-  transition: .3s all ease;
+
+
+// css
+.container section .wrapper h1 {
+  font-size: 30px;
 }
-.btn:hover {
-      background-color: lighten($btn_bg, 20); // 顏色內建                  
- }
 
-            
+section .wrapper h2 {
+  font-size: 28px;
+}
 
+section .wrapper h2 span {
+  font-size: 15px;
+}
 
+// scss
+.container {
+  .main {
+    .wrapper {
+      h1 {
+        font-size: 40px;
+      }
+
+      h2 {
+        font-size: 26px;
+
+        span {
+
+          font-size: 12px;
+        }
+      }
+
+      .btn {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+        background-color: $btn_bg;
+        color: invert($btn_bg); // 反轉
+        cursor: pointer;
+        transition: .3s all ease;
+      }
+
+      .btn:hover {
+        background-color: lighten($btn_bg, 20); // 顏色內建                  
+      }
+    }
+
+  }
+}
