--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-/* css 註解 */
+.text {
+  font-size: 30px;
+  letter-spacing: 10px;
+}
+
 body {
   font-size: 40px;
   font-family: "Arial, Helvetica, sans-serif";
@@ -10,6 +14,18 @@ body {
   padding: 10px;
 }
 
+header nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header nav ul li {
+  padding: 0 20px;
+}
+
+/* css 註解 */
 .wrapper {
   width: 1366px;
   margin: 20px auto;
