--- a/css/mixin.css
+++ b/css/mixin.css
@@ -14,4 +14,24 @@
   margin: 0 auto 0;
   width: 500px;
 }
+
+body {
+  background-color: #e2e2e2;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+body h1 {
+  font-size: 36px;
+}
+
+body h2 {
+  font-size: 20px;
+}
+
+body {
+  background-color: #333;
+  font-size: 16px;
+  line-height: 24px;
+}
 /*# sourceMappingURL=mixin.css.map */
