--- a/css/mixin.css
+++ b/css/mixin.css
@@ -34,4 +34,36 @@ body {
   font-size: 16px;
   line-height: 24px;
 }
+
+.btn_sumbit {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  background-color: #00b5fd;
+  color: #ff4a02;
+  cursor: pointer;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+  border-radius: 5px;
+}
+
+.btn_sumbit:hover {
+  background-color: #64d3ff;
+}
+
+.btn_cancel {
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  background-color: #b9b9b9;
+  color: #464646;
+  cursor: pointer;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+  border-radius: 5px;
+}
+
+.btn_cancel:hover {
+  background-color: #ececec;
+}
 /*# sourceMappingURL=mixin.css.map */
