--- a/mixin.scss
+++ b/mixin.scss
@@ -52,7 +52,7 @@
 
 
 
-@mixin btn_default($w ,$btn_bg , $border_radius:null){
+@mixin btn_default($w ,$btn_bg ,$border_radius:null){
   width: 100%;
   padding: $w;
   text-align: center;
@@ -61,13 +61,14 @@
   cursor: pointer;
   transition: .3s all ease;
   border-radius: $border_radius;
+  box-sizing: border-box;
   &:hover {
     background-color: lighten($btn_bg, 20); // 顏色內建                  
   } 
 } 
 
 .btn_sumbit {
-   @include btn_default(20px,rgb(0, 181, 253), 5px)
+   @include btn_default(20px,rgb(0, 181, 253),10px)
 }
 
 .btn_cancel {
