--- a/css/mixin.css
+++ b/css/mixin.css
@@ -35,12 +35,30 @@ body {
   line-height: 24px;
 }
 
+.btn_sumbit {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  background-color: #00b5fd;
+  color: #ff4a02;
+  cursor: pointer;
+  -webkit-transition: .3s all ease;
+  transition: .3s all ease;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 10px;
+}
+
+.btn_sumbit:hover {
+  background-color: #64d3ff;
+}
+
 .btn_cancel {
   width: 100%;
   padding: 15px;
   text-align: center;
   background-color: #3affbd;
-  color: #fff;
+  color: #c50042;
   cursor: pointer;
   -webkit-transition: .3s all ease;
   transition: .3s all ease;
@@ -56,17 +74,20 @@ body {
   width: 100%;
   padding: 10px;
   text-align: center;
-  border: 1px solid red;
+  border: 1px solid #cc00ff;
   -webkit-transition: .3s all ease;
   transition: .3s all ease;
+  cursor: pointer;
   border-radius: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-top: 10px;
 }
 
 .btn_outline:hover {
   border: null;
-  background-color: red;
+  background-color: #cc00ff;
+  color: #33ff00;
 }
 
 .banner {
