--- a/css/foreach.css
+++ b/css/foreach.css
@@ -44,1003 +44,73 @@
   font-size: 10px;
 }
 
-.push_left_1 {
-  position: relative;
-  left: 1px;
+.col-1 {
+  max-width: 10%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10%;
+          flex: 0 0 10%;
 }
 
-.push_left_2 {
-  position: relative;
-  left: 2px;
+.col-2 {
+  max-width: 20%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
 }
 
-.push_left_3 {
-  position: relative;
-  left: 3px;
+.col-3 {
+  max-width: 30%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
 }
 
-.push_left_4 {
-  position: relative;
-  left: 4px;
+.col-4 {
+  max-width: 40%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
 }
 
-.push_left_5 {
-  position: relative;
-  left: 5px;
+.col-5 {
+  max-width: 50%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
 }
 
-.push_left_6 {
-  position: relative;
-  left: 6px;
+.col-6 {
+  max-width: 60%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60%;
+          flex: 0 0 60%;
 }
 
-.push_left_7 {
-  position: relative;
-  left: 7px;
+.col-7 {
+  max-width: 70%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70%;
+          flex: 0 0 70%;
 }
 
-.push_left_8 {
-  position: relative;
-  left: 8px;
+.col-8 {
+  max-width: 80%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 80%;
+          flex: 0 0 80%;
 }
 
-.push_left_9 {
-  position: relative;
-  left: 9px;
+.col-9 {
+  max-width: 90%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 90%;
+          flex: 0 0 90%;
 }
 
-.push_left_10 {
-  position: relative;
-  left: 10px;
-}
-
-.push_left_11 {
-  position: relative;
-  left: 11px;
-}
-
-.push_left_12 {
-  position: relative;
-  left: 12px;
-}
-
-.push_left_13 {
-  position: relative;
-  left: 13px;
-}
-
-.push_left_14 {
-  position: relative;
-  left: 14px;
-}
-
-.push_left_15 {
-  position: relative;
-  left: 15px;
-}
-
-.push_left_16 {
-  position: relative;
-  left: 16px;
-}
-
-.push_left_17 {
-  position: relative;
-  left: 17px;
-}
-
-.push_left_18 {
-  position: relative;
-  left: 18px;
-}
-
-.push_left_19 {
-  position: relative;
-  left: 19px;
-}
-
-.push_left_20 {
-  position: relative;
-  left: 20px;
-}
-
-.push_left_21 {
-  position: relative;
-  left: 21px;
-}
-
-.push_left_22 {
-  position: relative;
-  left: 22px;
-}
-
-.push_left_23 {
-  position: relative;
-  left: 23px;
-}
-
-.push_left_24 {
-  position: relative;
-  left: 24px;
-}
-
-.push_left_25 {
-  position: relative;
-  left: 25px;
-}
-
-.push_left_26 {
-  position: relative;
-  left: 26px;
-}
-
-.push_left_27 {
-  position: relative;
-  left: 27px;
-}
-
-.push_left_28 {
-  position: relative;
-  left: 28px;
-}
-
-.push_left_29 {
-  position: relative;
-  left: 29px;
-}
-
-.push_left_30 {
-  position: relative;
-  left: 30px;
-}
-
-.push_left_31 {
-  position: relative;
-  left: 31px;
-}
-
-.push_left_32 {
-  position: relative;
-  left: 32px;
-}
-
-.push_left_33 {
-  position: relative;
-  left: 33px;
-}
-
-.push_left_34 {
-  position: relative;
-  left: 34px;
-}
-
-.push_left_35 {
-  position: relative;
-  left: 35px;
-}
-
-.push_left_36 {
-  position: relative;
-  left: 36px;
-}
-
-.push_left_37 {
-  position: relative;
-  left: 37px;
-}
-
-.push_left_38 {
-  position: relative;
-  left: 38px;
-}
-
-.push_left_39 {
-  position: relative;
-  left: 39px;
-}
-
-.push_left_40 {
-  position: relative;
-  left: 40px;
-}
-
-.push_left_41 {
-  position: relative;
-  left: 41px;
-}
-
-.push_left_42 {
-  position: relative;
-  left: 42px;
-}
-
-.push_left_43 {
-  position: relative;
-  left: 43px;
-}
-
-.push_left_44 {
-  position: relative;
-  left: 44px;
-}
-
-.push_left_45 {
-  position: relative;
-  left: 45px;
-}
-
-.push_left_46 {
-  position: relative;
-  left: 46px;
-}
-
-.push_left_47 {
-  position: relative;
-  left: 47px;
-}
-
-.push_left_48 {
-  position: relative;
-  left: 48px;
-}
-
-.push_left_49 {
-  position: relative;
-  left: 49px;
-}
-
-.push_left_50 {
-  position: relative;
-  left: 50px;
-}
-
-.push_left_51 {
-  position: relative;
-  left: 51px;
-}
-
-.push_left_52 {
-  position: relative;
-  left: 52px;
-}
-
-.push_left_53 {
-  position: relative;
-  left: 53px;
-}
-
-.push_left_54 {
-  position: relative;
-  left: 54px;
-}
-
-.push_left_55 {
-  position: relative;
-  left: 55px;
-}
-
-.push_left_56 {
-  position: relative;
-  left: 56px;
-}
-
-.push_left_57 {
-  position: relative;
-  left: 57px;
-}
-
-.push_left_58 {
-  position: relative;
-  left: 58px;
-}
-
-.push_left_59 {
-  position: relative;
-  left: 59px;
-}
-
-.push_left_60 {
-  position: relative;
-  left: 60px;
-}
-
-.push_left_61 {
-  position: relative;
-  left: 61px;
-}
-
-.push_left_62 {
-  position: relative;
-  left: 62px;
-}
-
-.push_left_63 {
-  position: relative;
-  left: 63px;
-}
-
-.push_left_64 {
-  position: relative;
-  left: 64px;
-}
-
-.push_left_65 {
-  position: relative;
-  left: 65px;
-}
-
-.push_left_66 {
-  position: relative;
-  left: 66px;
-}
-
-.push_left_67 {
-  position: relative;
-  left: 67px;
-}
-
-.push_left_68 {
-  position: relative;
-  left: 68px;
-}
-
-.push_left_69 {
-  position: relative;
-  left: 69px;
-}
-
-.push_left_70 {
-  position: relative;
-  left: 70px;
-}
-
-.push_left_71 {
-  position: relative;
-  left: 71px;
-}
-
-.push_left_72 {
-  position: relative;
-  left: 72px;
-}
-
-.push_left_73 {
-  position: relative;
-  left: 73px;
-}
-
-.push_left_74 {
-  position: relative;
-  left: 74px;
-}
-
-.push_left_75 {
-  position: relative;
-  left: 75px;
-}
-
-.push_left_76 {
-  position: relative;
-  left: 76px;
-}
-
-.push_left_77 {
-  position: relative;
-  left: 77px;
-}
-
-.push_left_78 {
-  position: relative;
-  left: 78px;
-}
-
-.push_left_79 {
-  position: relative;
-  left: 79px;
-}
-
-.push_left_80 {
-  position: relative;
-  left: 80px;
-}
-
-.push_left_81 {
-  position: relative;
-  left: 81px;
-}
-
-.push_left_82 {
-  position: relative;
-  left: 82px;
-}
-
-.push_left_83 {
-  position: relative;
-  left: 83px;
-}
-
-.push_left_84 {
-  position: relative;
-  left: 84px;
-}
-
-.push_left_85 {
-  position: relative;
-  left: 85px;
-}
-
-.push_left_86 {
-  position: relative;
-  left: 86px;
-}
-
-.push_left_87 {
-  position: relative;
-  left: 87px;
-}
-
-.push_left_88 {
-  position: relative;
-  left: 88px;
-}
-
-.push_left_89 {
-  position: relative;
-  left: 89px;
-}
-
-.push_left_90 {
-  position: relative;
-  left: 90px;
-}
-
-.push_left_91 {
-  position: relative;
-  left: 91px;
-}
-
-.push_left_92 {
-  position: relative;
-  left: 92px;
-}
-
-.push_left_93 {
-  position: relative;
-  left: 93px;
-}
-
-.push_left_94 {
-  position: relative;
-  left: 94px;
-}
-
-.push_left_95 {
-  position: relative;
-  left: 95px;
-}
-
-.push_left_96 {
-  position: relative;
-  left: 96px;
-}
-
-.push_left_97 {
-  position: relative;
-  left: 97px;
-}
-
-.push_left_98 {
-  position: relative;
-  left: 98px;
-}
-
-.push_left_99 {
-  position: relative;
-  left: 99px;
-}
-
-.push_left_100 {
-  position: relative;
-  left: 100px;
-}
-
-.push_top_1 {
-  position: relative;
-  top: 1px;
-}
-
-.push_top_2 {
-  position: relative;
-  top: 2px;
-}
-
-.push_top_3 {
-  position: relative;
-  top: 3px;
-}
-
-.push_top_4 {
-  position: relative;
-  top: 4px;
-}
-
-.push_top_5 {
-  position: relative;
-  top: 5px;
-}
-
-.push_top_6 {
-  position: relative;
-  top: 6px;
-}
-
-.push_top_7 {
-  position: relative;
-  top: 7px;
-}
-
-.push_top_8 {
-  position: relative;
-  top: 8px;
-}
-
-.push_top_9 {
-  position: relative;
-  top: 9px;
-}
-
-.push_top_10 {
-  position: relative;
-  top: 10px;
-}
-
-.push_top_11 {
-  position: relative;
-  top: 11px;
-}
-
-.push_top_12 {
-  position: relative;
-  top: 12px;
-}
-
-.push_top_13 {
-  position: relative;
-  top: 13px;
-}
-
-.push_top_14 {
-  position: relative;
-  top: 14px;
-}
-
-.push_top_15 {
-  position: relative;
-  top: 15px;
-}
-
-.push_top_16 {
-  position: relative;
-  top: 16px;
-}
-
-.push_top_17 {
-  position: relative;
-  top: 17px;
-}
-
-.push_top_18 {
-  position: relative;
-  top: 18px;
-}
-
-.push_top_19 {
-  position: relative;
-  top: 19px;
-}
-
-.push_top_20 {
-  position: relative;
-  top: 20px;
-}
-
-.push_top_21 {
-  position: relative;
-  top: 21px;
-}
-
-.push_top_22 {
-  position: relative;
-  top: 22px;
-}
-
-.push_top_23 {
-  position: relative;
-  top: 23px;
-}
-
-.push_top_24 {
-  position: relative;
-  top: 24px;
-}
-
-.push_top_25 {
-  position: relative;
-  top: 25px;
-}
-
-.push_top_26 {
-  position: relative;
-  top: 26px;
-}
-
-.push_top_27 {
-  position: relative;
-  top: 27px;
-}
-
-.push_top_28 {
-  position: relative;
-  top: 28px;
-}
-
-.push_top_29 {
-  position: relative;
-  top: 29px;
-}
-
-.push_top_30 {
-  position: relative;
-  top: 30px;
-}
-
-.push_top_31 {
-  position: relative;
-  top: 31px;
-}
-
-.push_top_32 {
-  position: relative;
-  top: 32px;
-}
-
-.push_top_33 {
-  position: relative;
-  top: 33px;
-}
-
-.push_top_34 {
-  position: relative;
-  top: 34px;
-}
-
-.push_top_35 {
-  position: relative;
-  top: 35px;
-}
-
-.push_top_36 {
-  position: relative;
-  top: 36px;
-}
-
-.push_top_37 {
-  position: relative;
-  top: 37px;
-}
-
-.push_top_38 {
-  position: relative;
-  top: 38px;
-}
-
-.push_top_39 {
-  position: relative;
-  top: 39px;
-}
-
-.push_top_40 {
-  position: relative;
-  top: 40px;
-}
-
-.push_top_41 {
-  position: relative;
-  top: 41px;
-}
-
-.push_top_42 {
-  position: relative;
-  top: 42px;
-}
-
-.push_top_43 {
-  position: relative;
-  top: 43px;
-}
-
-.push_top_44 {
-  position: relative;
-  top: 44px;
-}
-
-.push_top_45 {
-  position: relative;
-  top: 45px;
-}
-
-.push_top_46 {
-  position: relative;
-  top: 46px;
-}
-
-.push_top_47 {
-  position: relative;
-  top: 47px;
-}
-
-.push_top_48 {
-  position: relative;
-  top: 48px;
-}
-
-.push_top_49 {
-  position: relative;
-  top: 49px;
-}
-
-.push_top_50 {
-  position: relative;
-  top: 50px;
-}
-
-.push_top_51 {
-  position: relative;
-  top: 51px;
-}
-
-.push_top_52 {
-  position: relative;
-  top: 52px;
-}
-
-.push_top_53 {
-  position: relative;
-  top: 53px;
-}
-
-.push_top_54 {
-  position: relative;
-  top: 54px;
-}
-
-.push_top_55 {
-  position: relative;
-  top: 55px;
-}
-
-.push_top_56 {
-  position: relative;
-  top: 56px;
-}
-
-.push_top_57 {
-  position: relative;
-  top: 57px;
-}
-
-.push_top_58 {
-  position: relative;
-  top: 58px;
-}
-
-.push_top_59 {
-  position: relative;
-  top: 59px;
-}
-
-.push_top_60 {
-  position: relative;
-  top: 60px;
-}
-
-.push_top_61 {
-  position: relative;
-  top: 61px;
-}
-
-.push_top_62 {
-  position: relative;
-  top: 62px;
-}
-
-.push_top_63 {
-  position: relative;
-  top: 63px;
-}
-
-.push_top_64 {
-  position: relative;
-  top: 64px;
-}
-
-.push_top_65 {
-  position: relative;
-  top: 65px;
-}
-
-.push_top_66 {
-  position: relative;
-  top: 66px;
-}
-
-.push_top_67 {
-  position: relative;
-  top: 67px;
-}
-
-.push_top_68 {
-  position: relative;
-  top: 68px;
-}
-
-.push_top_69 {
-  position: relative;
-  top: 69px;
-}
-
-.push_top_70 {
-  position: relative;
-  top: 70px;
-}
-
-.push_top_71 {
-  position: relative;
-  top: 71px;
-}
-
-.push_top_72 {
-  position: relative;
-  top: 72px;
-}
-
-.push_top_73 {
-  position: relative;
-  top: 73px;
-}
-
-.push_top_74 {
-  position: relative;
-  top: 74px;
-}
-
-.push_top_75 {
-  position: relative;
-  top: 75px;
-}
-
-.push_top_76 {
-  position: relative;
-  top: 76px;
-}
-
-.push_top_77 {
-  position: relative;
-  top: 77px;
-}
-
-.push_top_78 {
-  position: relative;
-  top: 78px;
-}
-
-.push_top_79 {
-  position: relative;
-  top: 79px;
-}
-
-.push_top_80 {
-  position: relative;
-  top: 80px;
-}
-
-.push_top_81 {
-  position: relative;
-  top: 81px;
-}
-
-.push_top_82 {
-  position: relative;
-  top: 82px;
-}
-
-.push_top_83 {
-  position: relative;
-  top: 83px;
-}
-
-.push_top_84 {
-  position: relative;
-  top: 84px;
-}
-
-.push_top_85 {
-  position: relative;
-  top: 85px;
-}
-
-.push_top_86 {
-  position: relative;
-  top: 86px;
-}
-
-.push_top_87 {
-  position: relative;
-  top: 87px;
-}
-
-.push_top_88 {
-  position: relative;
-  top: 88px;
-}
-
-.push_top_89 {
-  position: relative;
-  top: 89px;
-}
-
-.push_top_90 {
-  position: relative;
-  top: 90px;
-}
-
-.push_top_91 {
-  position: relative;
-  top: 91px;
-}
-
-.push_top_92 {
-  position: relative;
-  top: 92px;
-}
-
-.push_top_93 {
-  position: relative;
-  top: 93px;
-}
-
-.push_top_94 {
-  position: relative;
-  top: 94px;
-}
-
-.push_top_95 {
-  position: relative;
-  top: 95px;
-}
-
-.push_top_96 {
-  position: relative;
-  top: 96px;
-}
-
-.push_top_97 {
-  position: relative;
-  top: 97px;
-}
-
-.push_top_98 {
-  position: relative;
-  top: 98px;
-}
-
-.push_top_99 {
-  position: relative;
-  top: 99px;
-}
-
-.push_top_100 {
-  position: relative;
-  top: 100px;
+.col-10 {
+  max-width: 100%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
 }
 /*# sourceMappingURL=foreach.css.map */
