--- a/css/foreach.css
+++ b/css/foreach.css
@@ -199,4 +199,41 @@
   -o-object-fit: cover;
      object-fit: cover;
 }
+
+.spec {
+  margin-top: 10px;
+}
+
+h1 {
+  font-size: 60px;
+  color: #333;
+}
+
+h2 {
+  font-size: 36px;
+  color: #333;
+}
+
+h3 {
+  font-size: 24px;
+  color: #333;
+}
+
+span {
+  font-size: 14px;
+  color: #333;
+}
+
+a {
+  font-size: 12px;
+  color: #333;
+}
+
+.black {
+  color: #333;
+}
+
+.default {
+  color: #000;
+}
 /*# sourceMappingURL=foreach.css.map */
