--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,11 +1,11 @@
 <nav>
     <h1>@@title</h1>
     <ul>
-        <li>
-           選單1 
+        <li class="@@active1">
+          首頁 
         </li>
-        <li>選單2</li>
-        <li>選單3</li>
+        <li class="@@active2">關於我們</li>
+        <li class="@@active3">產品頁</li>
         <li>選單4</li>
         <li>選單5</li>
     </ul>
