--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -2,10 +2,10 @@
     <h1>@@title</h1>
     <ul>
         <li class="@@active1">
-          首頁 
+          <a href="index.html">首頁</a>  
         </li>
-        <li class="@@active2">關於我們</li>
-        <li class="@@active3">產品頁</li>
+        <li class="@@active2"><a href="about.html">關於我們</a></li>
+        <li class="@@active3"><a href="product.html">產品頁</a></li>
         <li>選單4</li>
         <li>選單5</li>
     </ul>
