--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,3 +19,11 @@ body {
 
 
 }
+
+// 未加
+.example {
+    transition: 1s all ease;
+    user-select: none;
+    transform: rotate(20deg);
+}
+/*打包*/
